--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a chat room",
   "main": "app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "^4.13.3",
